# hstdb

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.html  README.md  config.toml  flake.nix  histdb-rs.service
.github/workflows/: rust.yml  rust_audit.yml  rust_release.yml
pkg/aur/: PKGBUILD
resources/: histdb-rs.service  init.zsh  send_test  start_test_server
src/: client.rs  config.rs  entry.rs  lib.rs  main.rs  message.rs  opt.rs  run.rs  server.rs  store.rs  version.rs
src/run/: import.rs  mod.rs  readme.rs
src/server/: builder.rs  db.rs  mod.rs  server.rs  server_.rs  tests.rs
src/store/: cache.rs  filter.rs  mod.rs
templates/: README.md  readme_section.md
tests/: client_server_integration.rs  client_server_intigration.rs
