[package]
name = "hstdb"
version = "2.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

edition = "2021"
rust-version = "1.56"

description = "Better history management for zsh. Based on ideas from [https://github.com/larkery/zsh-histdb](https://github.com/larkery/zsh-histdb)."
documentation = "https://docs.rs/hstdb/"
homepage = "https://github.com/AlexanderThaller/hstdb"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["histdb-import"]
histdb-import = ["rusqlite"]

[dependencies]
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive", "env"] }
comfy-table = "6"
crossbeam-utils = "0.8"
csv = "1"
ctrlc = { version = "3", features = ["termination"] }
directories = "4"
flume = "0.10"
glob = "0.3"
hostname = "0.3"
humantime = "2"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
regex = "1"
rusqlite = { version = "0.27", optional = true }
serde = { version = "1", features = ["derive"] }
sled = "0.34"
thiserror = "1"
toml = "0.5"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"