[package]
name = "hstdb"
version = "2.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

edition = "2024"
rust-version = "1.85.0"

description = "Better history management for zsh. Based on ideas from [https://github.com/larkery/zsh-histdb](https://github.com/larkery/zsh-histdb)."
documentation = "https://docs.rs/hstdb/"
homepage = "https://github.com/AlexanderThaller/hstdb"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["histdb-import"]
histdb-import = ["rusqlite"]

[dependencies]
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap_complete = "4"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
crossbeam-utils = "0.8"
csv = "1"
ctrlc = { version = "3", features = ["termination"] }
directories = "6"
flume = "0.11"
glob = "0.3"
hostname = "0.4"
humantime = "2"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.5"
regex = "1"
rusqlite = { version = "0.34", optional = true }
serde = { version = "1", features = ["derive"] }
sled = "0.34"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
exitcode = "1.1.2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"
