[package]
name = "hstdb"
version = "3.0.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

edition = "2024"
rust-version = "1.88.0"

description = "Better history management for zsh."
documentation = "https://docs.rs/hstdb/"
homepage = "https://github.com/AlexanderThaller/hstdb"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/hstdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["histdb-import"]
histdb-import = ["rusqlite"]
generate-readme = ["dep:askama"]

[dependencies]
askama = { version = "0.14", optional = true }
bitcode = { version = "0.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap_complete = "4"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
comfy-table = "7"
crossbeam-utils = "0.8"
csv = "1"
ctrlc = { version = "3", features = ["termination"] }
directories = "6"
env_logger = { version = "0.11", default-features = false, features = [
  "color",
] }
exitcode = "1"
flume = "0.12"
glob = "0.3"
hostname = "0.4"
humantime = "2"
log = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.39", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[lints.rust]
missing-docs = "warn"
missing-debug-implementations = "warn"
rust-2018-idioms = "warn"
unsafe-code = "forbid"
unused-lifetimes = "warn"

[lints.clippy]
allow-attributes = "warn"
allow-attributes-without-reason = "warn"
dbg-macro = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap-used = "warn"
missing-panics-doc = "allow"
missing-errors-doc = "allow"
wildcard-enum-match-arm = "warn"
disallowed-methods = "deny"

[profile.release]
debug = true

[profile.deploy]
codegen-units = 1
debug = false
incremental = false
inherits = "release"
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.fastdev]
inherits = "release"
debug-assertions = true
